fix: style bug - quotas sidenav overflow

--- a/src/Features/Quotas/Sidenav/Sidenav.module.scss
+++ b/src/Features/Quotas/Sidenav/Sidenav.module.scss
@@ -167,3 +167,7 @@
 //     width: 1rem;
 //   }
 // }
+
+.taskSection {
+  overflow-y: scroll;
+}
